
0.10.1d Aug 11, 2009
 * do not print empty strings as suggestions
 * free priority strings and resources when parsing is complete
 * updated Greek translation from George Vlahavas

0.10.1c Jul 12, 2009
 * updated default and example rc settings for slackware64
 * updated conflicts and suggests parsing to fix certain PACKAGES.TXT formatting

0.10.1b May 23, 2009
 * updated parsing of compressed and uncompressed sizes in
   /var/log/packages entries 
 * fixed handling of a plus sign in package location (path) in MD5
   (Ondrej Zary)
 * fixed small issues in FAQ#17 script

0.10.1a Apr 28, 2009
 * modernized script in FAQ#17. How do I create my own package source?
 * updated makefile for building the slapt-get package
 * updated MD5 parsing to accept new slackware MD5SUM metadata
   in /var/log/packages entries
 * disabled file size check since slack PACKAGES.TXT sizes
   are no longer accurate byte counts
 * added support for txz package extension
 * updated de translation from Manfred Mueller
 * updated pt_BR translation from Sergio Surkamp
 * moved slapt_pkg_version_parts out of public header

0.10.1 Dec 12, 2008
 * fixed an initialization errror in slapt_is_required_by() that
   caused a segfault when removing with --no-deps.
 * if no package sources are defined with a priority, disable use of
   priorities when dealing with /patches.  This prevents the previous
   default slapt-get behavior from changing and causing confusion.  With
   priorities, /patches is always assigned +1 above the package sources
   priority.  So if no priorities were in use then anything found in any
   sources /patches always trumped anything else.  This is probably the
   most correct behavior but it is still unexpected for existing users.
   To get the correct behavior, assign a priority to one or more sources.
 * reordered priorities to "default < official < preferred < custom" as
   this seems to be more intuitive.  Having preferred less than official
   is confusing.
