@@ -800,21 +800,24 @@ int slapt_add_deps_to_trans(const slapt_rc_config *global_config,
 
   /* loop through the deps */
   for (c = 0; c < deps->pkg_count; ++c) {
+    unsigned int cindex = 0;
     slapt_pkg_info_t *dep = deps->pkgs[c];
     slapt_pkg_info_t *dep_installed  = NULL;
-    slapt_pkg_info_t *conflicted_pkg = NULL;
+    struct slapt_pkg_list *conflicts = NULL;
 
     /*
      * the dep wouldn't get this far if it where excluded,
      * so we don't check for that here
      */
 
-    conflicted_pkg =
+    conflicts =
       slapt_is_conflicted(tran,avail_pkgs,installed_pkgs,dep);
 
-    if (conflicted_pkg != NULL) {
-      slapt_add_remove_to_transaction(tran,conflicted_pkg);
+    for (cindex = 0; cindex < conflicts->pkg_count;cindex++) {
+      slapt_add_remove_to_transaction(tran,conflicts->pkgs[cindex]);
     }
+
+    slapt_free_pkg_list(conflicts);
 
     dep_installed = slapt_get_newest_pkg(installed_pkgs,dep->name);
     if (dep_installed == NULL) {
@@ -833,13 +836,14 @@ int slapt_add_deps_to_trans(const slapt_rc_config *global_config,
 }
 
 /* make sure pkg isn't conflicted with what's already in the transaction */
-slapt_pkg_info_t *slapt_is_conflicted(slapt_transaction_t *tran,
+struct slapt_pkg_list *slapt_is_conflicted(slapt_transaction_t *tran,
                                       struct slapt_pkg_list *avail_pkgs,
                                       struct slapt_pkg_list *installed_pkgs,
                                       slapt_pkg_info_t *pkg)
 {
   unsigned int i;
   struct slapt_pkg_list *conflicts = NULL;
+  struct slapt_pkg_list *conflicts_in_transaction = slapt_init_pkg_list();
 
   /* if conflicts exist, check to see if they are installed
      or in the current transaction
@@ -852,19 +856,19 @@ slapt_pkg_info_t *slapt_is_conflicted(slapt_transaction_t *tran,
         || slapt_get_newest_pkg(tran->install_pkgs,p->name) != NULL
     ) {
       printf(gettext("%s, which is to be installed, conflicts with %s\n"), p->name,pkg->name);
-      slapt_free_pkg_list(conflicts);
-      return p;
+
+      slapt_add_pkg_to_pkg_list(conflicts_in_transaction, p);
     }
     if (slapt_get_newest_pkg(installed_pkgs,p->name) != NULL) {
       printf(gettext("Installed %s conflicts with %s\n"), p->name,pkg->name);
-      slapt_free_pkg_list(conflicts);
-      return p;
+
+      slapt_add_pkg_to_pkg_list(conflicts_in_transaction, p);
     }
   }
 
   slapt_free_pkg_list(conflicts);
 
-  return NULL;
+  return conflicts_in_transaction;
 }
 
 static void add_suggestion(slapt_transaction_t *tran, slapt_pkg_info_t *pkg)
@@ -876,7 +880,7 @@ static void add_suggestion(slapt_transaction_t *tran, slapt_pkg_info_t *pkg)
   }
 
   while (isspace(pkg->suggests[position]) != 0)
-    ++position;
+      ++position;
 
   while (position < len) {
     int total_len = 0,rest_len = 0;
